# Puzzle-Moppet

./: .clang-format  .gitignore  CMakeLists.txt  HACKING.txt  README.md  README.txt
.github/workflows/: cmake-multi-platform.yml
appimage/: config.desktop  make_appimage.sh  puzzlemoppet.desktop
assets/models/: balloon.blend  box.blend  grass.blend  gridarrow.blend  ground_single.blend  ground_single_LOD.blend  ground_single_fall.blend  ground_single_sideless.blend  icybox.blend  teleport.blend  titletext.blend  unitcube.blend
assets/models/brush_icons/: icon_balloon.xcf  icon_event_fan.xcf  icon_event_lift.xcf  icon_event_player_start.xcf  icon_exitportal.xcf  icon_fallground.xcf  icon_fan.xcf  icon_groundtile.xcf  icon_lift.xcf  icon_movable_block.xcf  icon_slidingbox.xcf
assets/models/events/: event_fan_draft.blend  event_lift.blend  event_player_start.blend
assets/models/fan/: magicfan.blend
assets/models/finalscene/: scene.blend
assets/sounds/: appear.flac  balloonpush.flac  beep.flac  bell.flac  buttonflutter_micro.flac  excellent.flac  extraordinary.flac  fair.flac  fallblock.flac  good.flac  hithard.flac  laugh.flac  liftrun.flac  perfect.flac  slide.flac  sox-convert.sh  step.flac  stepballoon.flac
data/: gui.xml
data/levels/: level_names.ini  levels.list
data/media/: balloon.irrmesh  gridarrow.irrmesh  icybox.irrmesh  icybox_inner.irrmesh  nothing.irrmesh  teleport.irrmesh
data/perfectscores/: alittlebridge.ini  balloon_dispenser.ini  balloonacy.ini  balloonacy2.ini  balloonacy3.ini  balloons_and_boxes.ini  concept_level.ini  confusion.ini  craftymining.ini  discovery.ini  first.ini  forbidden_land.ini  icy_intro.ini  icystoppers.ini  icytraversal.ini  lalala_mini.ini  liftland.ini  moonballoon.ini  not_more_shiftblocks.ini  pyramid_mining.ini  shiftblocks.ini  simple_aha.ini  splody.ini  stack_sliding.ini  stack_sliding2.ini  stack_sliding3.ini  tower.ini  tutorial_jump.ini  tutorial_lifts.ini  up_and_down.ini  up_in_the_sky.ini
data/tutorialtexts/: concept_level.ini  first.ini  shiftblocks.ini
data/tutorialtexts_mac/: concept_level.ini  shiftblocks.ini  tutorial_lifts.ini
include/: Buttons.h  CollisionMaterialInteraction.h  Colors.h  Event.h  GlobalDefines.h  IAngularThruster.h  IBobAnimator.h  IBody.h  IBoxCollisionGeometry.h  ICamera.h  ICameraCollider.h  ICameraController.h  ICharacter.h  ICharacterController.h  ICollisionGeometry.h  ICollisionMaterial.h  IController.h  IDynamicBody.h  IEngine.h  IEventQueue.h  IGraphic.h  IInputProfile.h  ILinearThrustRotationController.h  ILinearThruster.h  IMesh.h  IMeshCollisionGeometry.h  IMotionAnimator.h  IMotionSensor.h  INodeHandler.h  IPausable.h  IPhysics.h  IPositionController.h  IPostProcessingChain.h  IProxyTransformable.h  IRenderSystem.h  IRotationController.h  ISensor.h  IShader.h  ISound.h  ISound2D.h  (+19 more)
include/utils/: Set.h  Variant.h  VariantMap.h  file.h  log.h  maths.h  os.h  paths.h  stl_utils.h  str.h
include/utils/os/: path.h
licenses/: LICENSE-ODE.txt  LICENSE-graphics.txt  LICENSE-jpeg.txt  LICENSE-sounds.txt  README.txt
pkgbuild/: PKGBUILD
projects/: CMakeLists.txt
projects/ConfigApp/: CMakeLists.txt  main.cpp
projects/Puzzle/: CMakeLists.txt  CameraCollider.h  Editor.cpp  Editor.h  EndLevelScreen.cpp  EndLevelScreen.h  Enums.h  Events.cpp  Events.h  FinalScenePlayerProxy.h  GUIPane.h  GridBasedCharacterController.h  Level.cpp  Level.h  MainState.cpp  MainState.h  Map.cpp  Map.h  Positioner.cpp  Positioner.h  RotateToAnimator.h  SimpleMenu.cpp  SimpleMenu.h  StartScreen.cpp  StartScreen.h  get_lines.h  level_stats.cpp  level_stats.h  main.cpp  options.cpp  volume.cpp
projects/tests/: CMakeLists.txt  main.cpp  test_Variant.h  test_str.h
puzzlemoppet/: CMakeLists.txt
puzzlemoppet/cmake/: FindIrrlicht.cmake
puzzlemoppet/include/: CollisionMaterialInteraction.h  GlobalDefines.h  ICharacter.h  IEngine.h  IPhysics.h  ITransformable.h  IUpdatable.h  IWorld.h  Litha.h
puzzlemoppet/licenses/: LICENSE-sounds.txt
puzzlemoppet/projects/: CMakeLists.txt
puzzlemoppet/source/: CMakeLists.txt  Camera.h  Character.h  Engine.cpp  Engine.h  EventQueue.cpp  InputProfile.cpp  Kernel.cpp  Kernel.h  Mesh.cpp  Mesh.h  MotionSensor.cpp  PostProcessingChain.cpp  PostProcessingChain.h  ProxyTransformable.h  Shader.cpp  ShaderInstance.cpp  ShaderInstance.h  ShaderManager.cpp  SoundQueue.cpp  SoundQueue.h  SoundSource.cpp  SoundSource.h  ThirdPersonCameraController.cpp  Updater.h  UserCharacterController.h  World.cpp
source/: CGUITTFont.cpp  CGUITTFont.h  CMakeLists.txt  Camera.cpp  Camera.h  Character.cpp  Character.h  Colors.cpp  Engine.cpp  Engine.h  EventQueue.cpp  EventQueue.h  FontCache.cpp  FontCache.h  InfiniteRunningAverage.h  InputProfile.cpp  InputProfile.h  Kernel.cpp  Kernel.h  LogicTask.cpp  LogicTask.h  Mesh.cpp  Mesh.h  MotionSensor.cpp  MotionSensor.h  NodeHandler.cpp  NodeHandler.h  PostProcessingChain.cpp  PostProcessingChain.h  ProxyTransformable.cpp  ProxyTransformable.h  RenderTask.cpp  RenderTask.h  Shader.cpp  Shader.h  ShaderInstance.cpp  ShaderInstance.h  ShaderInstanceDef.h  ShaderManager.cpp  ShaderManager.h  (+13 more)
source/Animators/: BobAnimator.cpp  BobAnimator.h  RotationAnimator.cpp  RotationAnimator.h
source/Physics/: BoxCollisionGeometry.cpp  BoxCollisionGeometry.h  CollisionGeometry.cpp  CollisionGeometry.h  CollisionMaterial.cpp  CollisionMaterial.h  DynamicBody.cpp  DynamicBody.h  MeshCollisionGeometry.cpp  MeshCollisionGeometry.h  Physics.cpp  Physics.h  SphereCollisionGeometry.cpp  SphereCollisionGeometry.h  StaticBody.cpp  StaticBody.h  ode_utility.cpp  ode_utility.h  ray_collision.cpp  ray_collision.h
source/SoundSystems/: SoundSystem.cpp  SoundSystem.h
source/SoundSystems/OpenALSoundSystem/: OpenALSound.cpp  OpenALSound.h  OpenALSound2D.cpp  OpenALSound2D.h  OpenALSound3D.cpp  OpenALSound3D.h  OpenALSoundSystem.cpp  OpenALSoundSystem.h  openal_stuff.cpp  sound_reg.cpp  sound_reg.h
source/utils/: Variant.cpp  VariantMap.cpp  file.cpp  log.cpp  maths.cpp  os.cpp  paths.cpp  str.cpp
source/utils/os/: path.cpp
winbuild/: create_release.ps1
(+75 files in other folders)
